Properly integrate modules into the loading process (Bug#30164).
* src/lread.c (Fload): Don't defer to module-load immediately when
encountering a module, but use the normal loading machinery to
properly set up load-history, check for recursive loads, print
messages, etc.

* test/src/emacs-module-tests.el (module/load-history): New test.
(module/describe-function-1): Adapt test.

* etc/NEWS: Mention fixed behavior.

--- a/etc/NEWS
+++ b/etc/NEWS
@@ -916,6 +916,10 @@ file name extensions.
 ** The new function 'read-answer' accepts either long or short answers
 depending on the new customizable variable 'read-answer-short'.
 
+** The function 'load' now behaves correctly when loading modules.
+Specifically, it puts the module name into 'load-history', prints
+loading messages if requested, and protects against recursive loads.
+
 
 * Changes in Specialized Modes and Packages in Emacs 26.1
 
