--- a/doc/misc/tramp.texi
+++ b/doc/misc/tramp.texi
@@ -2720,11 +2720,13 @@ this.  You could overwrite this behavior by evaluating
 @end group
 @end lisp
 
-@value{tramp} does not use the defaults specified in
-@code{process-environment} for running @code{process-file} or
-@code{start-file-process} on remote hosts.  When values from
-@code{process-environment} are needed for remote processes, then set
-them as follows:
+In addition to @option{tramp-remote-process-environment}, you can set
+environment variables for individual remote process calls by
+let-binding @code{process-environment}.  @value{tramp} applies any
+entries not present in the global default value of
+@code{process-environment} (overriding
+@option{tramp-remote-process-environment} settings, if they conflict).
+For example:
 
 @lisp
 @group
