--- a/doc/emacs/programs.texi
+++ b/doc/emacs/programs.texi
@@ -907,7 +907,7 @@ also do spell checking on comments with Flyspell Prog mode
 comments.  For example, in Lisp code, comments starting with two
 semicolons are indented as if they were lines of code, while those
 starting with three semicolons are supposed to be aligned to the left
-margin and are often used for sectioning purposes.  Emacs understand
+margin and are often used for sectioning purposes.  Emacs understands
 these conventions; for instance, typing @kbd{@key{TAB}} on a comment
 line will indent the comment to the appropriate position.
 
@@ -1450,7 +1450,7 @@ the menu item named @samp{Source Code Parsers (Semantic)} in the
 
    When Semantic mode is enabled, Emacs automatically attempts to
 parse each file you visit.  Currently, Semantic understands C, C++,
-HTML, Java, Javascript, Make, Python, Scheme, SRecode, and Texinfo.
+Javascript, Java, HTML, Make, Python, Scheme, SRecode, and Texinfo.
 Within each parsed buffer, the following commands are available:
 
 @table @kbd
@@ -1672,9 +1672,7 @@ chaotically indented code.  If you are new to CC Mode, you might find
 it disconcerting.  You can toggle electric action with the command
 @kbd{C-c C-l}; when it is enabled, @samp{/@var{c}l} appears in the
 mode line after the mode name (where @var{c}, if present, is @samp{*}
-or @samp{/}, depending on whether the comment style is block or line).
-@xref{Minor Modes,,, ccmode, The CC Mode Manual}, for more about
-mode-line indicators in CC Mode.
+or @samp{/}):
 
 @table @kbd
 @item C-c C-l
