--- a/doc/emacs/dired.texi
+++ b/doc/emacs/dired.texi
@@ -586,9 +586,10 @@ might be inconsistent with the file on disk if its contents has changed
 since it was last visited.  If you don't want this, you may wish
 reverting the files you have visited in your buffers, or turning on
 the @code{auto-revert} mode in those buffers, before invoking this
-command.  @xref{Reverting}.  If you prefer that this command always revisit
-the file, without having to revert the file or enable @code{auto-revert}
-mode, you might want to set @code{dired-always-read-filesystem} to non-@code{nil}.
+command.  @xref{Reverting}.  If you prefer that this command always
+revisits the file, without having to revert the file or enable
+@code{auto-revert} mode, you might want to set
+@code{dired-always-read-filesystem} to non-@code{nil}.
 
 @item C-/
 @itemx C-x u
