--- a/doc/misc/org.texi
+++ b/doc/misc/org.texi
@@ -12982,7 +12982,7 @@ of these examples works:
 @subsubheading Embedding clickable images
 For clickable images, provide a link whose description is another link to an
 image file.  For example, to embed an image @file{org-mode-unicorn.png} which
-when clicked jumps to @uref{https://orgmode.org} website, do the following
+when clicked jumps to @uref{http://Orgmode.org} website, do the following
 
 @example
 [[https://orgmode.org][./org-mode-unicorn.png]]
