* doc/emacs/dired.texi (Marks vs Flags): Copyedits.

--- a/doc/emacs/dired.texi
+++ b/doc/emacs/dired.texi
@@ -582,12 +582,12 @@ the regular expression @var{regexp}
 name.  Note that if a file is visited in an Emacs buffer,
 and @code{dired-always-read-filesystem} is @code{nil} (the default), this
 command will look in the buffer without revisiting the file, so the results
-might be inconsistent with the file on disk if its contents has changed
-since it was last visited.  If you don't want this, you may wish
-reverting the files you have visited in your buffers, or turning on
-the @code{auto-revert} mode in those buffers, before invoking this
-command.  @xref{Reverting}.  If you prefer that this command always
-revisits the file, without having to revert the file or enable
+might be inconsistent with the file on disk if its contents have changed
+since it was last visited.  If you don't want this, you may wish to
+revert the files you have visited in your buffers, or to turn on
+@code{auto-revert} mode in those buffers, before invoking this
+command.  @xref{Reverting}.  If you prefer that this command should always
+revisit the file, without you having to revert the file or enable
 @code{auto-revert} mode, you might want to set
 @code{dired-always-read-filesystem} to non-@code{nil}.
 
