More improvements in the Emacs manual
* doc/emacs/maintaining.texi (Xref Commands, Identifier Search)
(List Identifiers): Insert blank lines between @item's in a
@table.
(Etags Regexps): More accurate description of escape sequences.
(Select Tags Table): Prefer "~/emacs.d/init.el" to "~/.emacs".
Suggested by Michael Albinus <michael.albinus@gmx.de> in
emacs-manual-bugs@gnu.org.

--- a/doc/emacs/maintaining.texi
+++ b/doc/emacs/maintaining.texi
@@ -1915,7 +1915,8 @@ Move to the previous reference and display it in the other window
 @findex xref-show-location-at-point
 Display the reference on the current line in the other window
 (@code{xref-show-location-at-point}).
-@item TAB
+
+@item @key{TAB}
 @findex xref-quit-and-goto-xref
 Display the reference on the current line and bury the @file{*xref*}
 buffer (@code{xref-quit-and-goto-xref}).
@@ -2637,7 +2638,7 @@ current list, it is used @emph{as well as} the others.
 @example
 @group
 (setq tags-table-list
-      '("~/.emacs.d" "/usr/local/lib/emacs/src"))
+      '("~/emacs.d/init.el" "/usr/local/lib/emacs/src"))
 @end group
 @end example
 
