; Fix oversight from last commit
* doc/emacs/maintaining.texi (Select Tags Table): Use proper
"~/.emacs.d" directory.

--- a/doc/emacs/maintaining.texi
+++ b/doc/emacs/maintaining.texi
@@ -2633,7 +2633,7 @@ current list, it is used @emph{as well as} the others.
 @example
 @group
 (setq tags-table-list
-      '("~/emacs.d/init.el" "/usr/local/lib/emacs/src"))
+      '("~/.emacs.d" "/usr/local/lib/emacs/src"))
 @end group
 @end example
 
