--- a/doc/misc/tramp.texi
+++ b/doc/misc/tramp.texi
@@ -2315,7 +2315,7 @@ for a host named @code{c}.
 A workaround: write a wrapper script for @option{scp} to convert
 Windows file names to Cygwin file names.
 
-@cindex cygwin and ssh-agent
+@cindex cygwin and @command{ssh-agent}
 @cindex @env{SSH_AUTH_SOCK} and emacs on ms windows
 
 When using the @command{ssh-agent} on MS Windows for password-less
