--- a/doc/emacs/sending.texi
+++ b/doc/emacs/sending.texi
@@ -424,7 +424,7 @@ Move to the @samp{Bcc} header (@code{message-goto-bcc}).
 @item C-c C-f C-r
 Move to the @samp{Reply-to} header (@code{message-goto-reply-to}).
 @item C-c C-f C-f
-Move to the @samp{Mail-Followup-To} header field
+Move to the @samp{Mail-followup-to} header field
 (@code{message-goto-followup-to}).
 @item C-c C-f C-w
 Add a new @samp{Fcc} header field, with file-name completion
