--- a/doc/emacs/building.texi
+++ b/doc/emacs/building.texi
@@ -453,17 +453,11 @@ the variable @code{grep-files-aliases}.
 @kbd{M-x rgrep}.  The default value includes the data directories used
 by various version control systems.
 
-@vindex grep-find-abbreviate
-@findex grep-find-toggle-abbreviation
-  By default, the shell commands constructed for @code{lgrep},
-@code{rgrep}, and @code{zgrep} are abbreviated for display by
-concealing the part that contains a long list of files and directories
-to ignore.  You can reveal the concealed part by clicking on the
-button with ellipsis, which represents them.  You can also
-interactively toggle viewing the concealed part by typing @kbd{M-x
-grep-find-toggle-abbreviation}.  To disable this abbreviation of the
-shell commands, customize the option @code{grep-find-abbreviate} to a
-@code{nil} value.
+@vindex grep-find-hide
+  The boolean option @code{grep-find-hide} controls shortening of the
+displayed command line by hiding the part containing ignored
+directories and files.  The hidden part can be revealed by clicking on
+the button with ellipsis.
 
 @node Flymake
 @section Finding Syntax Errors On The Fly
