--- a/etc/NEWS
+++ b/etc/NEWS
@@ -352,6 +352,11 @@ following variables nil: 'emacs-build-system', 'emacs-build-time',
 'C-M-w' in isearch changed from isearch-del-char to the new function
 isearch-yank-symbol-or-char. isearch-del-char is now bound to 'C-M-d'.
 
++++
+** New isearch bindings.
+'C-M-w' in isearch changed from isearch-del-char to the new function
+isearch-yank-symbol-or-char. isearch-del-char is now bound to 'C-M-d'.
+
 ---
 ** Emacs can now be built with support for Little CMS.
 
