Fix @findex and @vindex entries in manuals
* doc/emacs/building.texi:
* doc/emacs/calendar.texi:
* doc/emacs/cmdargs.texi:
* doc/emacs/mini.texi:
* doc/emacs/misc.texi:
* doc/emacs/trouble.texi:
* doc/emacs/windows.texi:
* doc/lispintro/emacs-lisp-intro.texi:
* doc/lispref/edebug.texi:
* doc/lispref/frames.texi:
* doc/lispref/os.texi:
* doc/lispref/windows.texi:
* doc/misc/cc-mode.texi:
* doc/misc/dired-x.texi:
* doc/misc/ediff.texi:
* doc/misc/mh-e.texi:
* doc/misc/pcl-cvs.texi:
* doc/misc/reftex.texi:
* doc/misc/sc.texi:
* doc/misc/vhdl-mode.texi:
* doc/misc/viper.texi: Fix @findex and @vindex entries.

--- a/doc/emacs/cmdargs.texi
+++ b/doc/emacs/cmdargs.texi
@@ -661,8 +661,9 @@ saving time information.  @xref{Time Zone Rules,,, elisp, The GNU
 Emacs Lisp Reference Manual}.  On MS-Windows, Emacs
 does not use @env{TZ} at all.
 @item USER
-@vindex USER, environment variable
-The user's login name.  See also @env{LOGNAME}.
+@vindex USER@r{, environment variable}
+The user's login name.  See also @env{LOGNAME}.  On MS-DOS, this
+defaults to @samp{root}.
 @item VERSION_CONTROL
 @vindex VERSION_CONTROL@r{, environment variable}
 Used to initialize the @code{version-control} variable (@pxref{Backup
