--- a/doc/emacs/xresources.texi
+++ b/doc/emacs/xresources.texi
@@ -231,7 +231,7 @@ Additional space between lines, in pixels.
 @cindex background for menus
 The background color of the menus in non-toolkit versions of Emacs.
 (For toolkit versions, see @ref{Lucid Resources}, also see @ref{Motif
-Resources}, and see @ref{GTK resources}.)
+Resources}, and see @ref{GTK Resources}.)
 @end ifnottex
 
 @item @code{menuBar} (class @code{MenuBar})
@@ -248,13 +248,13 @@ will use a separate minibuffer frame instead.
 @cindex font for menus
 Font name for menu pane titles, in non-toolkit versions of Emacs.
 (For toolkit versions, see @ref{Lucid Resources}, also see @ref{Motif
-Resources}, and see @ref{GTK resources}.)
+Resources}, and see @ref{GTK Resources}.)
 
 @item @code{paneForeground} (class @code{Foreground})
 @cindex foreground for menus
 Foreground color for menu pane titles, in non-toolkit versions of
 Emacs.  (For toolkit versions, see @ref{Lucid Resources}, also see
-@ref{Motif Resources}, and see @ref{GTK resources}.)
+@ref{Motif Resources}, and see @ref{GTK Resources}.)
 @end ifnottex
 
 @item @code{pointerColor} (class @code{Foreground})
@@ -292,12 +292,12 @@ compiled with GTK+ support.
 @item @code{selectionFont} (class @code{SelectionFont})
 Font name for pop-up menu items, in non-toolkit versions of Emacs.  (For
 toolkit versions, see @ref{Lucid Resources}, also see @ref{Motif
-Resources}, and see @ref{GTK resources}.)
+Resources}, and see @ref{GTK Resources}.)
 
 @item @code{selectionForeground} (class @code{SelectionForeground})
 Foreground color for pop-up menu items, in non-toolkit versions of
 Emacs.  (For toolkit versions, see @ref{Lucid Resources}, also see
-@ref{Motif Resources}, and see @ref{GTK resources}.)
+@ref{Motif Resources}, and see @ref{GTK Resources}.)
 
 @item @code{selectionTimeout} (class @code{SelectionTimeout})
 Number of milliseconds to wait for a selection reply.
