Fix @kindex entries in manuals
* doc/emacs/basic.texi:
* doc/emacs/buffers.texi:
* doc/emacs/building.texi:
* doc/emacs/calendar.texi:
* doc/emacs/custom.texi:
* doc/emacs/dired.texi:
* doc/emacs/display.texi:
* doc/emacs/files.texi:
* doc/emacs/frames.texi:
* doc/emacs/help.texi:
* doc/emacs/indent.texi:
* doc/emacs/killing.texi:
* doc/emacs/kmacro.texi:
* doc/emacs/mark.texi:
* doc/emacs/mini.texi:
* doc/emacs/misc.texi:
* doc/emacs/modes.texi:
* doc/emacs/msdos-xtra.texi:
* doc/emacs/msdos.texi:
* doc/emacs/mule.texi:
* doc/emacs/picture-xtra.texi:
* doc/emacs/programs.texi:
* doc/emacs/regs.texi:
* doc/emacs/rmail.texi:
* doc/emacs/screen.texi:
* doc/emacs/search.texi:
* doc/emacs/sending.texi:
* doc/emacs/text.texi:
* doc/emacs/trouble.texi:
* doc/lispref/files.texi:
* doc/misc/calc.texi:
* doc/misc/cc-mode.texi:
* doc/misc/ediff.texi:
* doc/misc/epa.texi:
* doc/misc/ert.texi:
* doc/misc/eww.texi:
* doc/misc/forms.texi:
* doc/misc/gnus.texi:
* doc/misc/info.texi:
* doc/misc/mairix-el.texi:
* doc/misc/message.texi:
* doc/misc/mh-e.texi:
* doc/misc/newsticker.texi:
* doc/misc/org.texi:
* doc/misc/pcl-cvs.texi:
* doc/misc/rcirc.texi:
* doc/misc/sc.texi:
* doc/misc/sieve.texi:
* doc/misc/vhdl-mode.texi:
* doc/misc/vip.texi:
* doc/misc/viper.texi:
* doc/misc/woman.texi: Fix @kindex entries.  Mark keys consistently.

--- a/doc/emacs/mule.texi
+++ b/doc/emacs/mule.texi
@@ -130,7 +130,7 @@ various @dfn{input methods}, typically one for each script or
 language, which make it easier to type characters in the script.
 @xref{Input Methods}.
 
-@kindex C-x RET
+@kindex C-x @key{RET}
   The prefix key @kbd{C-x @key{RET}} is used for commands that pertain
 to multibyte characters, coding systems, and input methods.
 
@@ -588,7 +588,7 @@ Display a list of all the supported input methods.
 
 @findex set-input-method
 @vindex current-input-method
-@kindex C-x RET C-\
+@kindex C-x @key{RET} C-\
   To choose an input method for the current buffer, use @kbd{C-x
 @key{RET} C-\} (@code{set-input-method}).  This command reads the
 input method name from the minibuffer; the name normally starts with the
@@ -1031,7 +1031,7 @@ Convert a region that was decoded using coding system @var{wrong},
 decoding it using coding system @var{right} instead.
 @end table
 
-@kindex C-x RET f
+@kindex C-x @key{RET} f
 @findex set-buffer-file-coding-system
   The command @kbd{C-x @key{RET} f}
 (@code{set-buffer-file-coding-system}) sets the file coding system for
@@ -1053,7 +1053,7 @@ current buffer.  For example, @kbd{C-x @key{RET} f dos @key{RET}} will
 cause Emacs to save the current buffer's text with DOS-style
 carriage return followed by linefeed line endings.
 
-@kindex C-x RET c
+@kindex C-x @key{RET} c
 @findex universal-coding-system-argument
   Another way to specify the coding system for a file is when you visit
 the file.  First use the command @kbd{C-x @key{RET} c}
@@ -1087,7 +1087,7 @@ then save it in a file.  Selecting a language environment typically sets
 this variable to a good choice of default coding system for that language
 environment.
 
-@kindex C-x RET r
+@kindex C-x @key{RET} r
 @findex revert-buffer-with-coding-system
   If you visit a file with a wrong coding system, you can correct this
 with @kbd{C-x @key{RET} r} (@code{revert-buffer-with-coding-system}).
@@ -1123,8 +1123,8 @@ subprocess input and output in the current buffer
 (@code{set-buffer-process-coding-system}).
 @end table
 
-@kindex C-x RET x
-@kindex C-x RET X
+@kindex C-x @key{RET} x
+@kindex C-x @key{RET} X
 @findex set-selection-coding-system
 @findex set-next-selection-coding-system
   The command @kbd{C-x @key{RET} x} (@code{set-selection-coding-system})
@@ -1149,7 +1149,7 @@ list of some of these symbols, Emacs tries only the request types in
 the list, in order, until one of them succeeds, or until the list is
 exhausted.
 
-@kindex C-x RET p
+@kindex C-x @key{RET} p
 @findex set-buffer-process-coding-system
   The command @kbd{C-x @key{RET} p} (@code{set-buffer-process-coding-system})
 specifies the coding system for input and output to a subprocess.  This
@@ -1191,7 +1191,7 @@ names (@code{set-file-name-coding-system}).
 @end table
 
 @findex set-file-name-coding-system
-@kindex C-x RET F
+@kindex C-x @key{RET} F
 @cindex file names with non-@acronym{ASCII} characters
   The command @kbd{C-x @key{RET} F} (@code{set-file-name-coding-system})
 specifies a coding system to use for encoding file @emph{names}.  It
@@ -1257,7 +1257,7 @@ Use coding system @var{coding} for keyboard input
 (@code{set-keyboard-coding-system}).
 @end table
 
-@kindex C-x RET t
+@kindex C-x @key{RET} t
 @findex set-terminal-coding-system
   The command @kbd{C-x @key{RET} t} (@code{set-terminal-coding-system})
 specifies the coding system for terminal output.  If you specify a
@@ -1274,7 +1274,7 @@ Emacs knows which characters the terminal can actually handle.
 Emacs can deduce the proper coding system from your terminal type or
 your locale specification (@pxref{Language Environments}).
 
-@kindex C-x RET k
+@kindex C-x @key{RET} k
 @findex set-keyboard-coding-system
 @vindex keyboard-coding-system
   The command @kbd{C-x @key{RET} k} (@code{set-keyboard-coding-system}),
@@ -1850,7 +1850,33 @@ sometimes jump when point traverses reordered bidirectional text.
 Similarly, a highlighted region covering a contiguous range of
 character positions may look discontinuous if the region spans
 reordered text.  This is normal and similar to the behavior of other
-programs that support bidirectional text.  If you set
-@code{visual-order-cursor-movement} to a non-@code{nil} value, cursor
-motion by the arrow keys follows the visual order on screen
-(@pxref{Moving Point, visual-order movement}).
+programs that support bidirectional text.
+
+@kindex @key{RIGHT}@r{, and bidirectional text}
+@kindex @key{LEFT}@r{, and bidirectional text}
+@findex right-char@r{, and bidirectional text}
+@findex left-char@r{, and bidirectional text}
+  Cursor motion commands bound to arrow keys, such as @key{LEFT} and
+@kbd{C-@key{RIGHT}}, are sensitive to the base direction of the
+current paragraph.  In a left-to-right paragraph, commands bound to
+@key{RIGHT} with or without modifiers move @emph{forward} through
+buffer text, but in a right-to-left paragraph they move
+@emph{backward} instead.  This reflects the fact that in a
+right-to-left paragraph buffer positions predominantly increase when
+moving to the left on display.
+
+  When you move out of a paragraph, the meaning of the arrow keys
+might change if the base direction of the preceding or the following
+paragraph is different from the paragraph out of which you moved.
+When that happens, you need to adjust the arrow key you press to the
+new base direction.
+
+@vindex visual-order-cursor-movement
+@cindex cursor, visual-order motion
+  By default, @key{LEFT} and @key{RIGHT} move in the logical order,
+but if @code{visual-order-cursor-movement} is non-@code{nil}, these
+commands move to the character that is, correspondingly, to the left
+or right of the current screen position, moving to the next or
+previous screen line as appropriate.  Note that this might potentially
+move point many buffer positions away, depending on the surrounding
+bidirectional context.
