--- a/doc/emacs/misc.texi
+++ b/doc/emacs/misc.texi
@@ -129,7 +129,7 @@ sessions.
   The following commands are available in the Gnus group buffer:
 
 @table @kbd
-@kindex @key{SPC} @r{(Gnus Group mode)}
+@kindex SPC @r{(Gnus Group mode)}
 @findex gnus-group-read-group
 @item @key{SPC}
 Switch to the summary buffer for the group on the current line
@@ -180,7 +180,7 @@ Kill the group on the current line (@code{gnus-group-kill-group}).
 Killed groups are not recorded in the @file{.newsrc} file, and they
 are not shown in the @kbd{l} or @kbd{L} listings.
 
-@kindex @key{DEL} @r{(Gnus Group mode)}
+@kindex DEL @r{(Gnus Group mode)}
 @item @key{DEL}
 Move point to the previous group containing unread articles
 (@code{gnus-group-prev-unread-group}).
@@ -209,7 +209,7 @@ Update your Gnus settings, and quit Gnus (@code{gnus-group-exit}).
   The following commands are available in the Gnus summary buffer:
 
 @table @kbd
-@kindex @key{SPC} @r{(Gnus Summary mode)}
+@kindex SPC @r{(Gnus Summary mode)}
 @findex gnus-summary-next-page
 @item @key{SPC}
 If there is no article selected, select the article on the current
@@ -220,7 +220,7 @@ buffer, select the next unread article (@code{gnus-summary-next-page}).
 Thus, you can read through all articles by repeatedly typing
 @key{SPC}.
 
-@kindex @key{DEL} @r{(Gnus Summary mode)}
+@kindex DEL @r{(Gnus Summary mode)}
 @findex gnus-summary-prev-page
 @item @key{DEL}
 Scroll the text of the article backwards
@@ -505,8 +505,8 @@ or @kbd{C-x [} (@code{doc-view-previous-page}).
 
 @findex doc-view-scroll-up-or-next-page
 @findex doc-view-scroll-down-or-previous-page
-@kindex @key{SPC} @r{(DocView mode)}
-@kindex @key{DEL} @r{(DocView mode)}
+@kindex SPC @r{(DocView mode)}
+@kindex DEL @r{(DocView mode)}
   @key{SPC} (@code{doc-view-scroll-up-or-next-page}) is a convenient
 way to advance through the document.  It scrolls within the current
 page or advances to the next.  @key{DEL} moves backwards in a similar
@@ -852,7 +852,7 @@ commands:
 
 @table @kbd
 @item @key{RET}
-@kindex @key{RET} @r{(Shell mode)}
+@kindex RET @r{(Shell mode)}
 @findex comint-send-input
 Send the current line as input to the subshell
 (@code{comint-send-input}).  Any shell prompt at the beginning of the
@@ -862,7 +862,7 @@ interactive shell.  However, you can also invoke @key{RET} elsewhere
 in the shell buffer to submit the current line as input.
 
 @item @key{TAB}
-@kindex @key{TAB} @r{(Shell mode)}
+@kindex TAB @r{(Shell mode)}
 @findex completion-at-point@r{, in Shell Mode}
 @cindex shell completion
 Complete the command name or file name before point in the shell
@@ -1214,7 +1214,7 @@ Move point to the previous prompt (@code{comint-previous-prompt}).
 @item C-c C-n
 Move point to the following prompt (@code{comint-next-prompt}).
 
-@kindex C-c @key{RET} @r{(Shell mode)}
+@kindex C-c RET @r{(Shell mode)}
 @findex comint-copy-old-input
 @item C-c @key{RET}
 Copy the input command at point, inserting the copy at the end of the
@@ -2854,7 +2854,7 @@ the package commentary by typing @kbd{C-h P browse-url @key{RET}}.
 Activate URLs and e-mail addresses in the current buffer.
 @end table
 
-@kindex C-c @key{RET} @r{(Goto Address mode)}
+@kindex C-c RET @r{(Goto Address mode)}
 @findex goto-address-at-point
   You can make Emacs mark out URLs specially in the current buffer, by
 typing @kbd{M-x goto-address-mode}.  When this buffer-local minor mode
