--- a/doc/emacs/fixit.texi
+++ b/doc/emacs/fixit.texi
@@ -146,10 +146,6 @@ Transpose two words (@code{transpose-words}).
 Transpose two balanced expressions (@code{transpose-sexps}).
 @item C-x C-t
 Transpose two lines (@code{transpose-lines}).
-@item M-x transpose-sentences
-Transpose two sentences (@code{transpose-sentences}).
-@item M-x transpose-paragraphs
-Transpose two paragraphs (@code{transpose-paragraphs}).
 @item M-x transpose-regions
 Transpose two regions.
 @end table
@@ -207,6 +203,15 @@ the effect of plain @kbd{C-M-t}.
 otherwise a command with a repeat count of zero would do nothing): to
 transpose the character (word, expression, line) ending after point
 with the one ending after the mark.
+
+@findex transpose-regions
+  @kbd{M-x transpose-regions} transposes the text between point and
+mark with the text between the last two marks pushed to the mark ring
+(@pxref{Setting Mark}).  With a numeric prefix argument, it transposes
+the text between point and mark with the text between two successive
+marks that many entries back in the mark ring.  This command is best
+used for transposing multiple characters (or words or sentences or
+paragraphs) in one go.
 
 @findex transpose-regions
   @kbd{M-x transpose-regions} transposes the text between point and
